@@ -4,6 +4,8 @@ budgie-desktop (10.2.7-1) unstable; urgency=medium
   * Packaging changes
     - add relro + bindnow hardening
     - maintainer change of email address
+    - add debugging symbols packages
+  * inc patch to display budgie-icon for lightdm greeter (LP:#1562182)
 
  -- David Mohammed <fossfreedom@ubuntu.com>  Sun, 17 Jul 2016 22:56:58 +0100
 
